tien dung fix bug

--- a/CinemaBook/Scence/Account/AccountInfo/view/AccountInfoViewController.xib
+++ b/CinemaBook/Scence/Account/AccountInfo/view/AccountInfoViewController.xib
@@ -467,6 +467,9 @@
                                             <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <action selector="btn_updateAccount:" destination="-1" eventType="touchUpInside" id="ezg-PU-ShA"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
