commit tai quan cafe

--- a/CinemaBook/Scence/Booking/BookingChair/view/cell/itemCollectionCell/ItemChairCategoryCollectionViewCell.xib
+++ b/CinemaBook/Scence/Booking/BookingChair/view/cell/itemCollectionCell/ItemChairCategoryCollectionViewCell.xib
@@ -19,7 +19,7 @@
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0cn-zU-CuS">
                         <rect key="frame" x="0.0" y="17" width="22" height="22"/>
-                        <color key="backgroundColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="22" id="Nn3-pU-zhq"/>
                             <constraint firstAttribute="height" constant="22" id="SFM-qp-F28"/>
