--- a/CinemaBook/Scence/Home/view/cell/ItemCollectioncell/itemProductCollectionViewCell.xib
+++ b/CinemaBook/Scence/Home/view/cell/ItemCollectioncell/itemProductCollectionViewCell.xib
@@ -10,16 +10,29 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="headerCollectionViewCell" customModule="CinemaBook" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="itemProductCollectionViewCell" customModule="CinemaBook" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="h3" translatesAutoresizingMaskIntoConstraints="NO" id="umg-Xr-m6m">
+                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                    </imageView>
+                </subviews>
             </view>
-            <color key="backgroundColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="umg-Xr-m6m" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="8Re-f3-gvv"/>
+                <constraint firstItem="umg-Xr-m6m" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="EYy-V4-stA"/>
+                <constraint firstAttribute="trailing" secondItem="umg-Xr-m6m" secondAttribute="trailing" id="h7z-Lb-PVr"/>
+                <constraint firstAttribute="bottom" secondItem="umg-Xr-m6m" secondAttribute="bottom" id="tbY-xF-XDU"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <point key="canvasLocation" x="131.8840579710145" y="101.78571428571428"/>
+            <point key="canvasLocation" x="131.8840579710145" y="109.82142857142857"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="h3" width="2048" height="2048"/>
+    </resources>
 </document>
